--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.chigix</groupId>
     <artifactId>netty-router</artifactId>
-    <version>3.2.0</version>
+    <version>3.3.0-alpha</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
